--- a/HTML/grid.html
+++ b/HTML/grid.html
@@ -4,17 +4,28 @@
         <link rel="stylesheet" href="grid.css">
     </head>
     <body>
-        <div id=grid>
-            <div>orange</div>
-            <div>white</div>
-            <div>teal</div>
-        </div>
 
         <div id="grid-two">
-            <div>red</div>
-            <div>blue</div>
-            <div>purple</div>
-            <div>yellow</div>
+            <div id="red"></div>
+            <div id="blue"></div>
+            <div id="purple"></div>
+            <div id="yellow"></div>
+        </div>
+        <div>
+            <div id="japan">
+                <div id="japan-red"></div>
+            </div>
+            <div id="italy">
+                <div id="igreen"></div>
+                <div id='iwhite' ></div>
+                <div id="ired"></div>
+            </div>
+            <div id=german>
+                <div id="gblack"></div>
+                <div id="gred"></div>
+                <div id="gyellow"></div>
+            </div>
+            
         </div>
     </body>
 </html>
