--- a/HTML/grid.html
+++ b/HTML/grid.html
@@ -25,7 +25,32 @@
                 <div id="gred"></div>
                 <div id="gyellow"></div>
             </div>
-            
+
+            </div>
+            <div id=Belgium>
+                <div id="bblack"></div>
+                <div id="bred"></div>
+                <div id="byellow"></div>
+            </div> 
+        </div>
+        <div id=Thailand>
+            <div id="tred"></div>
+            <div id="twhite"></div>
+            <div id="tblue"></div>
+            <div id="twhite2"></div>
+        </div> 
+        <div id=Switzerland>
+            <div id="sred"></div>
+            <div id="swhite"></div>
+            <div id="swhite2"></div>
+        </div> 
+        <div id="United Arab Emirates">
+            <div id="ured"></div>
+            <div id="ured"></div>
+            <div id="ugreen"></div>
+            <div id="uwhite"></div>
+        </div>
+
         </div>
     </body>
 </html>
