--- a/HTML/grid.html
+++ b/HTML/grid.html
@@ -44,12 +44,17 @@
             <div id="swhite"></div>
             <div id="swhite2"></div>
         </div> 
-        <div id="United Arab Emirates">
-            <div id="ured"></div>
-            <div id="ured"></div>
-            <div id="ugreen"></div>
+        <div id="United-Arab-Emirates">
+            <div id="ublack"></div>
             <div id="uwhite"></div>
+            <div id="ugreen"></div>
+            <div id="ured"></div>
         </div>
+        <div id=sweden>
+            <div id="swblue"></div>
+            <div id="swyellow"></div>
+            <div id="swyellow2"></div>
+        </div> 
 
         </div>
     </body>
